Real Test & Fix bug
